--- a/multiplicador_exemplo5/multiplicador.qsf
+++ b/multiplicador_exemplo5/multiplicador.qsf
@@ -62,4 +62,5 @@ set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 set_global_assignment -name VHDL_FILE multiplicador_tb.vhd
 set_global_assignment -name VHDL_FILE BO/somador.vhd
 set_global_assignment -name VHDL_FILE BO/subtrator.vhd
+set_global_assignment -name VHDL_FILE BO/igualum.vhd
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
